# sst-tools

./: .gitignore  CMakeLists.txt  README.md
documentation/: Object-Mapping.md  SST-NeuralNet-Case-study.md  sst-15.1-iconsole-release-note.md  sst-tools-users-guide.md  sst-v15.0-debug-handbook.md
examples/: .gitignore  notes.txt
examples/debug_intro/: .gitignore  bug.in  iconsole.sh  nav.in  nn.py  replay.sh  sst-console.in  sweep.sh  trace-ac.in  trace.in  watch.in
examples/demo1/: demo1.sh  sweep.sh
examples/multithreaded_console/: nn-mt-demo.sh
examples/restart/: .gitignore  gen-checkpoint2.in  iconsole.sh  predictions.in  restart.in  restart.sh
examples/sync_checkpoint/: gen-checkpoint.in  gen-checkpoint.sh  gen-checkpoint2.in  gen-checkpoint2.sh  iconsole.sh  issue-11.in  issue-11.sh  nn.py
image_data/: .gitignore  getall.py
include/: tcldbg.h
scripts/: checkpoint_dump.py  cpt.py  cptapi.py  sst-chkpt.sh  sst-major-version.sh  sst-minor-version.sh  sst-restore.sh  test_git_hooks.sh  uninstall.sh
src/: CMakeLists.txt
src/dbgapi/: CMakeLists.txt  Protocol.md  SSTDbgAPI.cpp  SSTDbgAPI.h
src/include/: SST.h
src/readcpt/: CMakeLists.txt  readcpt.cc
src/readcpt-grid/: CMakeLists.txt  readcpt-grid.cc
sstcomp/: CMakeLists.txt
sstcomp/cptsubcomp/: CMakeLists.txt  cptsubcomp.cc  cptsubcomp.h
sstcomp/dbgcli/: CMakeLists.txt  dbgcli.cc  dbgcli.h  probe.cc  probe.h
sstcomp/dbgsst15/: CMakeLists.txt  ICDbgSST15.cc  ICDbgSST15.h  dbgsst15.cc  dbgsst15.h  probe.cc  probe.h
sstcomp/grid/: CMakeLists.txt  cptsubcomp.cc  cptsubcomp.h  gridnode.cc  gridnode.h
sstcomp/gridtest/: CMakeLists.txt  cptsubcomp.cc  cptsubcomp.h  gridtestnode.cc  gridtestnode.h
sstcomp/igrid/: CMakeLists.txt  README  igridnode.cc  igridnode.h  kgdbg.h
sstcomp/include/: EIGEN.h  OPENCV.h  SST.h  dataset.h  eigen_utils.h  nnglobals.h  nnutil.h
sstcomp/neuralnet/: CMakeLists.txt  README.md  neuralnet.h  nn_batch_controller.cc  nn_batch_controller.h  nn_eigen.h  nn_event.cc  nn_event.h  nn_layer.cc  nn_layer.h  nn_layer_base.h
sstcomp/omap/: CMakeLists.txt  omap.cc  omap.h
test/: CMakeLists.txt
test/cptapi/: .gitignore  2d.py  CMakeLists.txt  README.md  cpt_verify.py  debug-restore.sh  debug-save.sh  debug.sh  gridtest-console.in  pairofstructs-test.sh  sanity.sh  schema-save.sh  schema-test.sh  test-schema.sh  test-subcomp-interactive.sh  test-subcomp.sh  vecint-test.sh
test/dbgcli/: .gitignore  CMakeLists.txt  README.md  dbgcli-client.py  dbgcli-sanity.py  run-sanity.bash
test/dbgcli/testdev/: Makefile  README.md  client-run5.bash  probe.py
test/dbgsst15/: dbgsst15.py  run-basic.bash
test/igrid/: igrid2d.py  test.igrid.ref  test.interactive.ref  test_igrid.bash  test_interactive_console.bash
test/neuralnet/: CMakeLists.txt  README.md  SST-Case-Study.md  exp.sh  long.gold  nn-basic.sh  nn-interactive.sh  run-nn.sh  short.gold  test-5layer.sh  test-basic.sh  test-image.py
test/omap/: CMakeCache.txt  CMakeLists.txt  omsimple.py  omsimple.sh
